syntax = "proto3";

package vertis.yt.test;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message Before {
  google.protobuf.Timestamp timestamp = 1;
  string autoru_client_id = 2;
  string vin = 3;
  string offer_id = 4;
  string source = 5;
  uint64 views = 6;
  uint64 phone_views = 7;
  uint64 favorites = 8;
}

message After {
  reserved 6, 7, 8;
  reserved "views", "phone_views", "favorites";

  google.protobuf.Timestamp timestamp = 1;
  string autoru_client_id = 2;
  string vin = 3 ;
  string external_offer_id = 4;
  string source = 5;
  uint64 card_id = 9;
  string offer_id = 10;
  int64 views_delta = 11;
  int64 phone_views_delta = 12;
  int64 favorites_delta = 13;
}
